# SOFT_SI_2025

./: .gitignore  README.md  package-lock.json  package.json
00_course_material/assignments/03_data_parsing_server_part_3/: main.py  pyproject.toml
00_course_material/assignments/10b_Database_data_migration/: README.md  docker-compose.yml  mysqlMigration.js  mysql_schema.sql  package-lock.json  package.json  seed.sql
00_course_material/assignments/11a_Auth/: README.md
00_course_material/assignments/11b_payment/: app.js  package-lock.json  package.json
01_intro/: embeddedyoutube.html  getgooglehome.sh  paymentiframe.html
03_Modules/html_classic/: index.html  index.js  myModule.js
03_Modules/html_esmodules/: index.html  myModule.js
03_Modules/node_commonjs/: myModule.js
03_Modules/node_esmodules/: index.js
03_Modules/python_main/: library_importer.py  potential_library.py
03_Modules/python_modules/my_module/: file_one.py
04_Encode_Decode/01_node/: encode_decode.js
04_Encode_Decode/02_python/: encode_decode.py
05_Python_Virtual_Environments/01_venv/my_environment/: pyvenv.cfg
05_Python_Virtual_Environments/02_pipenv/: main.py
05_Python_Virtual_Environments/03_poetry/: pyproject.toml
06_Simple_Servers/01_node/: app.js  package-lock.json
06_Simple_Servers/02_python/: main.py  pyproject.toml
06_Simple_Servers/03_test/: app.js  package-lock.json  package.json
08_server-to-server/01_Node/: app.js
08_server-to-server/02_Python/: main.py  pyproject.toml
09_environment_variables/01_node/: index.js  package-lock.json  package.json
09_environment_variables/02_python/: main.py  pyproject.toml
10_Date/01_Node/: index.js
10_Date/02_Python/: main.py
11_Short_Polling/01_Node/: app.js  package.json
11_Short_Polling/01_Node/public/: index.html
12_Long_Polling/01_Node/: app.js  package-lock.json
13_Server-sent_Events/01_Node/: app.js  package.json
13_Server-sent_Events/01_Node/public/: index.html
13_Server-sent_Events/02_pythnon/: main.py  pyproject.toml
13_Server-sent_Events/02_pythnon/templates/: index.html
14_WebSocket/01_node/: client.js  package-lock.json  package.json  server.js
14_WebSocket/02_python_plain/: client.py  pyproject.toml  server.py
14_WebSocket/03_python_fastapi/: main.py  pyproject.toml
15_OpenAPI/01_node/: app.js  package-lock.json  package.json
15_OpenAPI/02_python/: pyproject.toml
16_WebRTC/01_webrtc_browser_sdp/: index.html  package-lock.json  package.json
16_WebRTC/02_webrtc_firestore/: index.html  package-lock.json  package.json
17_Database_Migrations/: mydatabase_mro_docs.html  mysqldump.sql
17_Database_Migrations/01_node_knex/: package-lock.json  package.json
17_Database_Migrations/02_python_alembic/: pyproject.toml
17_Database_Migrations/02_python_alembic/alembic/versions/: 083691ce80d6_create_accounts_table.py
17_Database_Migrations/initdb/: init.sql
18_CORS/: index.html
18_CORS/01_node/: app.js  package-lock.json  package.json
18_CORS/02_python/: main.py  pyproject.toml
19_Multipart_Forms/: index.html
19_Multipart_Forms/01_node/: app.js  package-lock.json  package.json
19_Multipart_Forms/02_python/: main.py  pyproject.toml
20_base64_images/: index.html
21_Audio/: index.html
22_MPEG-DASH/: app.js  package.json
22_MPEG-DASH/public/: index.html
23_Embedded_YouTube/: embeddedyoutube.html
24_Git_Hooks/: main.js
25_Github_webhooks/01_node/: app.js
25_Github_webhooks/02_python/: pyproject.toml
26_GraphQL/01_node_basic/: app.js
26_GraphQL/02_node_intermediary/: app.js
27_Web_Scraping_Web_Crawling/01_node/: index.html  index.js
27_Web_Scraping_Web_Crawling/02_python_wiki_page_web_scraping/: pyproject.toml
27_Web_Scraping_Web_Crawling/04_python_scrapy_basic/: pyproject.toml
27_Web_Scraping_Web_Crawling/04_python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
(+37 files in other folders)
